fix tracker button overflow issue with flexbox of button container

--- a/public/app.css
+++ b/public/app.css
@@ -179,7 +179,7 @@ h2 {
   border: 1px solid #008ba3;
   border-radius: 3px;
   cursor: pointer;
-  margin-right: 5px;
+  margin: 3px;
   white-space: nowrap;
 }
 
@@ -204,7 +204,8 @@ h2 {
 .summary-btn-row {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  flex-wrap: wrap;
+  margin-top: 15px;
 }
 
 fieldset {
